Honor DatasetBrushRole in the headerData of our models.

This is required now, as the current KDChart version gets the data
from there to put it into the legend. Otherwise, it uses some default
color scheme which differs from the data we show in the plot itself.

BUG: 340440